tutorial/examples/services-networking/externalname-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: services-demo-externalname
spec:
  type: ExternalName
  externalName: services-demo-clusterip.default.svc.cluster.local
